<resources>
    <string name="app_name">teste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastro">Cadastro</string>
    <string name="Informacoes">Informacoes Pessoais</string>
    <string name="Formacao">Formação</string>
    <string name="menu_experiencia">Experiência Profissional</string>
    <string name="experiencia">Experiencia</string>
    <string name="Cursos">Cursos</string>
    <string name="Publicacoes">Publicações</string>
    <string name="app_name_Cadastro">Cadastro</string>
    <string name="Cadastro">Informe os dados necessarios:</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="telefone">Telefone:</string>
    <string name="email">Email</string>
    <string name="menu">Menu</string>
    <string name="Informações_Pessoais">Informações Pessoais</string>
    <string name="formacao">Formação</string>
    <string name="publicacoes">Publicações</string>
    <string name="hehehe">hehehe</string>
    <string name="page_title">Regular Title</string>
    <string name="edit">Editar</string>
    <string name="content_description_search">Editar</string>
    <string name="favorite">favoritos</string>
    <string name="content_description_favorite">favoritos</string>
    <string name="more">more</string>
    <string name="content_description_more">mais</string>
    <string name="settings">Configuracoes</string>
    <string name="done">sair</string>
    <string name="informacoes">Informacoes</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="informa_es_pessoais">Informações Pessoais</string>
    <string name="nome_luiz_carlos">Nome:Luiz Carlos</string>
    <string name="estado_civil_solteiro">Estado civil:Solteiro</string>
    <string name="idade_21">Idade:21</string>
    <string name="telefone_xxxxxx">Telefone:xxxxxx</string>
    <string name="data_de_nascimento_03_01_2001">Data de nascimento:03/01/2001</string>
    <string name="desenvolvimento_com_android">Desenvolvimento com Android</string>
    <string name="android_com_kotlin">Android com Kotlin</string>
    <string name="experi_ncia_profissional">Experiência Profissional</string>
    <string name="textview">TextView</string>
    <string name="est_gio_em_desenvolvimento_na_sensedia">Estágio em desenvolvimento na Sensedia</string>
    <string name="Sobre">Sobre</string>
    <string name="perfil_profissional">Perfil Profissional:</string>
</resources>