<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Cadastro"
            android:title="@string/cadastro"
            />
        <item
            android:id="@+id/nav_Informacoes"

            android:title="@string/Informacoes" />

        <item
            android:id="@+id/nav_experiecia"

            android:title="@string/menu_experiencia" />
        <item
            android:id="@+id/nav_Cursos"
            android:title="@string/Cursos"
            />
        <item
            android:id="@+id/nav_publicacoes"
            android:title="@string/Sobre"
            />

    </group>
</menu>